---
source: src/rust/items/extern_blocks.rs
expression: "crate::parse::<ExternBlock<P<Infallible>, Type<P<Infallible>>, P<Infallible>,\n        Ident>>(q.clone())"
---
Ok(
    ExternBlock {
        unsafe: false,
        abi: Some(
            StringLit {
                raw: "\"C\"",
                value: None,
                num_hashes: None,
                start_suffix: 3,
            },
        ),
        items: P(
            (
                Rep(
                    [],
                ),
                Rep(
                    [
                        Function(
                            Rep(
                                [],
                            ),
                            None,
                            Function {
                                qualifiers: FunctionQualifiers {
                                    const: false,
                                    async: false,
                                    unsafe: false,
                                    extern_abi: None,
                                },
                                id: Ident(
                                    with_name,
                                ),
                                generic_parameters: None,
                                params: Paren(
                                    FunctionParameters {
                                        self_param: None,
                                        params: Interlace {
                                            values: [
                                                FunctionParamPattern(
                                                    Rep(
                                                        [],
                                                    ),
                                                    Ty(
                                                        Ident(
                                                            format,
                                                        ),
                                                        NoBounds(
                                                            RawPointerType(
                                                                Const(
                                                                    NoBounds(
                                                                        TypePath(
                                                                            HigherOrderPath {
                                                                                leading: false,
                                                                                segments: Interlace {
                                                                                    values: [
                                                                                        Bare(
                                                                                            Id(
                                                                                                Ident(
                                                                                                    u8,
                                                                                                ),
                                                                                            ),
                                                                                        ),
                                                                                    ],
                                                                                },
                                                                            },
                                                                        ),
                                                                    ),
                                                                ),
                                                            ),
                                                        ),
                                                    ),
                                                ),
                                            ],
                                        },
                                    },
                                    Span,
                                ),
                                ret: None,
                                where_clause: None,
                                content: V0(
                                    FPunct(
                                        Span,
                                    ),
                                ),
                            },
                        ),
                    ],
                ),
            ),
        ),
    },
)
